AC_INIT(src/Makevars.in)

echo "configure.in: starting"

: ${R_HOME=`R RHOME`}
if test -z "${R_HOME}"; then
        echo "Could not determine R_HOME"
	exit 1
fi
CC=`${R_HOME}/bin/R CMD config CC`
CFLAGS=`${R_HOME}/bin/R CMD config CFLAGS`

# for ncdf4, I've chosen to REQUIRE the netcdf v4 interface
AC_PATH_NETCDF
if test $NETCDF_V4 = "no"; then
	echo "-------------------------------------------------------------------"
	echo "ncdf4 REQUIRES the netcdf library be version 4 or above,"
	echo "AND installed with HDF-5 support (i.e., the netcdf library must be"
	echo "compiled with the --enable-netcdf-4 flag). If you don't want to install"
	echo "the full version of netcdf-4 with HDF-5 support, then please install"
	echo "the old, deprecated ncdf package instead."
	echo "-------------------------------------------------------------------"
	exit -1
fi

HAVE_NETCDF=TRUE

NETCDF_LDFLAGS="$NETCDF_RPATH $NETCDF_LDFLAGS"

AC_SUBST(NETCDF_CPPFLAGS)
AC_SUBST(NETCDF_LDFLAGS)
AC_SUBST(NETCDF_RPATH)
AC_SUBST(HAVE_NETCDF)

AC_OUTPUT(src/Makevars)

echo " "
echo "**********************  Results of ncdf4 package configure *******************"
echo " "
echo "netCDF v4 CPP flags 	= $NETCDF_CPPFLAGS"
echo "netCDF v4 LD flags  	= $NETCDF_LDFLAGS"
echo "netCDF v4 runtime path 	= $NETCDF_RPATH"
echo " "
echo "******************************************************************************"
echo " "

